<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/sessionsList">

    <fragment
        android:id="@+id/sessionsList"
        android:name="me.jackwebb.android.conferenceappkotlin.ui.session.SessionListFragment"
        android:label="@string/iosdevuk_sessions"
        tools:layout="@layout/fragment_session_list">
        <action
            android:id="@+id/showSessionDetails"
            app:destination="@id/sessionDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/showAboutFromSessions"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/favouritesList"
        android:name="me.jackwebb.android.conferenceappkotlin.ui.favourites.FavouriteListFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_session_list">
        <action
            android:id="@+id/showFavouriteDetails"
            app:destination="@id/sessionDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/speakersList"
        android:name="me.jackwebb.android.conferenceappkotlin.ui.speakers.SpeakerListFragment"
        android:label="@string/speakers"
        tools:layout="@layout/fragment_speaker_list" >
        <action
            android:id="@+id/showSpeakerDetails"
            app:destination="@id/speakerDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/locationsList"
        android:name="me.jackwebb.android.conferenceappkotlin.ui.locations.LocationListFragment"
        android:label="@string/locations"
        tools:layout="@layout/fragment_location_list" >
        <action
            android:id="@+id/showLocationDetails"
            app:destination="@id/locationDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/sessionDetailFragment"
        android:name="me.jackwebb.android.conferenceappkotlin.ui.session.SessionDetailFragment"
        android:label="Session"
        tools:layout="@layout/fragment_session_detail">
        <action
            android:id="@+id/showSessionSpeakerDetails"
            app:destination="@id/speakerDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/showSessionLocationDetails"
            app:destination="@id/locationDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="session"
            app:argType="me.jackwebb.android.conferenceappkotlin.model.session.Session" />
    </fragment>
    <fragment
        android:id="@+id/speakerDetailFragment"
        android:name="me.jackwebb.android.conferenceappkotlin.ui.speakers.SpeakerDetailFragment"
        android:label="@string/speaker"
        tools:layout="@layout/fragment_speaker_detail">
        <argument
            android:name="speaker"
            app:argType="me.jackwebb.android.conferenceappkotlin.model.speaker.Speaker" />
    </fragment>
    <fragment
        android:id="@+id/locationDetailFragment"
        android:name="me.jackwebb.android.conferenceappkotlin.ui.locations.LocationDetailFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_location_detail">
        <argument
            android:name="location"
            app:argType="me.jackwebb.android.conferenceappkotlin.model.location.Location" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="me.jackwebb.android.conferenceappkotlin.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about"/>

</navigation>